[tool.poetry]
name = "pythonic-garage-band"
version = "0.1.0"
description = ""
authors = ["racarter1215 <racarter1215@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^6.2.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
